apps/data/pinot/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinot
  namespace: data
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - "pinot.lab.the-lab.zone"
  rules:
    - backendRefs:
        - name: pinot-controller
          port: 9000
          group: ""
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
